--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,4 @@
 <div>
+    <img src="/assets/VMlogo.png"/>
     <a class="internal-link" href="{{ site.baseurl }}/"><b>{{ site.title }}</b></a>
 </div>
