--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -5,7 +5,7 @@ layout: default
 <article>
   <div>
     <h1>{{ page.title }}</h1>
-    
+
   </div>
 
   <div id="notes-entry-container">
@@ -14,7 +14,7 @@ layout: default
     </content>
 
     <side style="font-size: 0.9em">
-      <h3 style="margin-bottom: 1em">Notes mentioning this note</h3>
+      <h3 style="margin-bottom: 1em">Ссылки на эту запись</h3>
       {% if page.backlinks.size > 0 %}
       <div style="display: grid; grid-gap: 1em; grid-template-columns: repeat(1fr);">
       {% for backlink in page.backlinks %}
@@ -28,7 +28,7 @@ layout: default
 
       <div style="font-size: 0.9em">
         <p>
-          There are no notes linking to this note.
+          Нет ссылок на эту запись
         </p>
       </div>
       {% endif %}
@@ -38,6 +38,6 @@ layout: default
 
 <hr>
 
-<p>Here are all the notes in this garden, along with their links, visualized as a graph.</p>
+
 
 {% include notes_graph.html %}
