--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,3 @@
-This is the footer. Include anything you'd like here, like a link to an <a class="internal-link" href="/about">About</a> page.
+[Telegram](https://t.me/vademec)
+[GitHub](https://github.com/Al7F4/vademecum)
+<a class="internal-link" href="/about">Об авторе</a>
