--- a/_includes/notes_graph.html
+++ b/_includes/notes_graph.html
@@ -6,7 +6,7 @@
 
   .nodes circle {
     cursor: pointer;
-    fill: #8b88e6;
+    fill: #b5eeff;
     transition: all 0.15s ease-out;
   }
 
@@ -37,7 +37,7 @@
 <div id="graph-wrapper">
   <script>
     var commentFlag = true;
-    
+
     window.addEventListener("load", loadGraph);
     window.addEventListener("scroll", loadGraph);
 
