--- a/_includes/link-previews.html
+++ b/_includes/link-previews.html
@@ -1,8 +1,8 @@
 <!-- That file is not particularly elegant. This will need a refactor at some point. -->
 <style>
   content a.internal-link {
-    border-color: #8b88e6;
-    background-color: #efefff;
+    border-color: #b5eeff;
+    background-color: #daf7ff;
   }
 
   #tooltip-wrapper {
@@ -82,7 +82,7 @@
           setTimeout(function() {
             tooltipWrapper.style.opacity = 1;
           }, 1)
-        } 
+        }
       } else {
         tooltipContent.innerHTML = linkHistories[event.target.href]
         tooltipWrapper.style.display = 'block';
