--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 [Telegram](https://t.me/vademec)
 [GitHub](https://github.com/Al7F4/vademecum)
-<a class="internal-link" href="/about">Об авторе</a>
+[[Цифровой сад|Что такое цифровой сад (Digital GArden)]]
