--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,9 @@
+<div align="center">
+
 [Telegram](https://t.me/vademec)
 [GitHub](https://github.com/Al7F4/vademecum)
-[[Цифровой сад|Что такое цифровой сад (Digital GArden)]]
+<a class="internal-link" href="https://t.me/vademec">Telegram</a>
+<a class="internal-link" href="https://github.com/Al7F4/vademecum">GitHub</a>
+<a class="internal-link" href="/about">Об авторе</a>
+
+</div>>
