--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,4 +1,5 @@
-$color-primary: hsl(0, 0%, 10%);
+$color-primary: hsl(190, 10%, 20%);
+$color-secondary: hsl(190, 100%, 20%);
 $color-text: hsl(0, 0%, 20%);
 $color-subtext: hsl(0, 0%, 30%);
 $color-border: hsl(0, 0%, 85%);
@@ -80,10 +81,10 @@ a {
   padding: 0 0.1em;
   text-decoration: none;
   border-bottom: 1px solid $color-border;
-  color: $color-primary;
+  color: $color-secondary;
   &:hover {
     color: black !important;
-    background: #fffaf1;
+    background: ##ffec04;
   }
   &:after {
     position: relative;
