--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -84,7 +84,7 @@ a {
   color: $color-secondary;
   &:hover {
     color: black !important;
-    background: ##ffec04;
+    background: #ffec04;
   }
   &:after {
     position: relative;
