--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -14,7 +14,7 @@ layout: default
     </content>
 
     <side style="font-size: 0.9em">
-      <h3 style="margin-bottom: 1em">Ссылки на эту запись</h3>
+      <h3 style="margin-bottom: 1em">Связанные заметки</h3>
       {% if page.backlinks.size > 0 %}
       <div style="display: grid; grid-gap: 1em; grid-template-columns: repeat(1fr);">
       {% for backlink in page.backlinks %}
