--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   {% include head.html %}
+  {% include analytics.html %}
   <body>
     <nav>{% include nav.html %}</nav>
     <div class="wrapper">
