--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,4 +4,4 @@
 <a class="internal-link" href="https://github.com/Al7F4/vademecum">GitHub</a>   |
 <a class="internal-link" href="/about">Об авторе</a>
 
-</div>>
+</div>
