--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -5,7 +5,10 @@ layout: default
 <article>
   <div>
     <h1>{{ page.title }}</h1>
-    <h1>{{ page.tag }}</h1>
+    <p class="tag">
+      {{ page.tag }}
+    </p>
+
 
   </div>
 
