--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -48,7 +48,7 @@ img {
 blockquote {
   padding: 1.5em;
   margin: 0;
-  font-size: 0.88em;
+  font-size: 0.9em;
   background: $color-box-background;
   border-radius: $border-radius;
 
@@ -144,4 +144,10 @@ code {
 .invalid-link-brackets {
   color: #cfcfcf;
   cursor: help;
+}
+tag {
+  background: #f5f5f5;
+  color: $color-secondary;
+  border-radius: 4px;
+  font-size: 0.7em;
 }
