--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -145,7 +145,7 @@ code {
   color: #cfcfcf;
   cursor: help;
 }
-tag {
+.tag {
   background: #f5f5f5;
   color: $color-secondary;
   border-radius: 4px;
