--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -5,8 +5,8 @@ layout: default
 <article>
   <div>
     <h1>{{ page.title }}</h1>
-    <p class="tag">
-      {{ page.tag }}
+    <p id="tag">
+      #{{ page.tag }}
     </p>
 
 
