--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -5,9 +5,9 @@ layout: default
 <article>
   <div>
     <h1>{{ page.title }}</h1>
-    <p id="tag">
+    <h5 id="tag">
       #{{ page.tag }}
-    </p>
+    </h5>
 
 
   </div>
