--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -69,7 +69,10 @@ h1,
 h2,
 h3,
 h4,
-h5,
+h5 {
+  background: #f5f5f5;
+  color: $color-secondary;
+}
 h6 {
   line-height: 1.3;
   margin-bottom: 0;
@@ -144,10 +147,4 @@ code {
 .invalid-link-brackets {
   color: #cfcfcf;
   cursor: help;
-}
-.tag {
-  background: #f5f5f5;
-  color: $color-secondary;
-  border-radius: 4px;
-  font-size: 0.7em;
 }
