--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -5,9 +5,7 @@ layout: default
 <article>
   <div>
     <h1>{{ page.title }}</h1>
-    <h5 id="tag">
-      #{{ page.tag }}
-    </h5>
+    <h5>#{{ page.tag }}</h5>
 
 
   </div>
