--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -75,7 +75,9 @@ h6 {
   padding-bottom: 0;
 }
 h4 {
-  color: $color-secondary;
+  color: grey;
+  margin-bottom: 0;
+  margin-top: 50;
 }
 a {
   transition: background 300ms;
