--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -73,9 +73,10 @@ h6 {
   line-height: 1.3;
   margin-bottom: 0;
   padding-bottom: 0;
+  color: lightgrey;
 }
 h4 {
-  color: grey;
+  color: $color-secondary;
   margin-bottom: 0;
   margin-top: 50;
 }
