--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -68,8 +68,7 @@ hr {
 h1,
 h2,
 h3,
-h5
-h6 {
+h5 {
   line-height: 1.3;
   margin-bottom: 0;
   padding-bottom: 0;
@@ -79,6 +78,12 @@ h4 {
   color: $color-secondary;
   margin-bottom: 0;
   margin-top: 50;
+}
+h6 {
+  line-height: 1.3;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  color: lightgrey;
 }
 a {
   transition: background 300ms;
