--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -5,7 +5,7 @@ layout: default
 <article>
   <div>
     <h1>{{ page.title }}</h1>
-    <h6>{{ page.tag }}</h6>
+    <h6>#{{ page.tag }}</h6>
 
 
   </div>
