--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,3 +5,11 @@ layout: default
 <content>
   {{ content }}
 </content>
+
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
