--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -82,7 +82,7 @@ h6 {
   line-height: 1.3;
   margin-bottom: 0;
   padding-bottom: 0;
-  color: lightgrey;
+  color: grey;
 }
 a {
   transition: background 300ms;
